--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "jquery": "latest",
+    "mobile-select-area": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
