--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.4.2",
-    "vue-router": "^2.7.0",
+    "axios": "^0.16.2",
     "jquery": "latest",
-    "mobile-select-area": "latest"
+    "mobile-select-area": "latest",
+    "vue": "^2.4.2",
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
